
A new, backward-compatible implementation of (srfi srfi-64) has been
contributed by Tomas Volf.  The reference implementation, which was used
so far, had a number of issues on Guile that made some of its interface
downright unusable (e.g., <https://bugs.gnu.org/72378>), non-conforming
(e.g., <https://bugs.gnu.org/72383>), or buggy (e.g.,
<https://bugs.gnu.org/72372>).

** GOOPS: Introduce new forms method* and define-method*

The module (oop goops) now exports method* and define-method* which are
the counterparts of lambda* and define* in they provide support for
advanced argument handling such as optional and keyword arguments. The
implementation fully supports (next-method) calls, also for keyword
arguments. The new syntax is documented in the Guile Reference manual.

* Changes to the distribution

* Bug fixes

** `basename` now checks the suffix against the base name, not the full path
   (<https://bugs.gnu.org/69437>)
** test-hashing should now work on 32-bit systems
** GUILE-VERSION changes should propagate to .version and relevant Makefiles
   (<https://bugs.gnu.org/72084>)
** Compiler no longer crashes when building Guile on 32-bit platforms
   (<https://bugs.gnu.org/71891>)
** Compiler no longer crashes when inlining 3.0.9 procedure with kw args
   (<https://bugs.gnu.org/72936>)
** Guile is compiled with -fexcess-precision=standard for i[3456]86 when possible
   (<https://bugs.gnu.org/43262>)
** Fix setjmp/longjmp-related crashes on Windows
   (<https://bugs.gnu.org/73167>)
** Fix portability issues for macOS
   (<https://bugs.gnu.org/72547>)
** Fix compilation with GCC 14 and musl on 32-bit systems
   (<https://bugs.gnu.org/73835>)
** Immutable stringbufs are now 8-byte aligned on all systems
   Previously they could end up with an alignment that violated the type
   tag for their type (e.g. ending up tagged as immediates SCM_IMP()).


Changes in 3.0.10 (since 3.0.9)

* Notable changes

** Beginnings of support for alternate back-ends
